update executed version

--- a/tf.version.1/03.cnn/07.cnn.cifar10.data.augmentation.ipynb
+++ b/tf.version.1/03.cnn/07.cnn.cifar10.data.augmentation.ipynb
@@ -46,6 +46,7 @@
     "import time\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
+    "%matplotlib inline\n",
     "from IPython.display import clear_output\n",
     "\n",
     "import tensorflow as tf\n",
