--- a/tf.version.1/03.cnn/10.tfrecords.ipynb
+++ b/tf.version.1/03.cnn/10.tfrecords.ipynb
@@ -29,9 +29,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/lab4all/anaconda3/lib/python3.6/site-packages/h5py/__init__.py:34: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
+      "  from ._conv import register_converters as _register_converters\n"
+     ]
+    }
+   ],
    "source": [
     "from __future__ import absolute_import\n",
     "from __future__ import division\n",
@@ -52,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +78,7 @@
     "_NUM_SHARDS = 5\n",
     "\n",
     "# The path where the Flowers dataset is\n",
-    "dataset_dir = '../data/flowers'"
+    "dataset_dir = '../../data/flowers'"
    ]
   },
   {
@@ -81,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,9 +155,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dataset size: 3670\n",
+      "class_names : ['daisy', 'dandelion', 'roses', 'sunflowers', 'tulips']\n"
+     ]
+    }
+   ],
    "source": [
     "print('dataset size: {}'.format(len(photo_filenames)))\n",
     "print('class_names : {}'.format(class_names))"
@@ -156,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,9 +183,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "class name: daisy -- index: 0\n",
+      "class name: dandelion -- index: 1\n",
+      "class name: roses -- index: 2\n",
+      "class name: sunflowers -- index: 3\n",
+      "class name: tulips -- index: 4\n"
+     ]
+    }
+   ],
    "source": [
     "# print class names to ids\n",
     "for key, value in class_names_to_ids.items():\n",
@@ -183,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,9 +225,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "training dataset size: 3320\n",
+      "validation dataset size: 350\n"
+     ]
+    }
+   ],
    "source": [
     "print('training dataset size: {}'.format(len(training_filenames)))\n",
     "print('validation dataset size: {}'.format(len(validation_filenames)))"
@@ -205,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -395,9 +434,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ">> Converting image 3320/3320 shard 4\n",
+      ">> Converting image 350/350 shard 4\n"
+     ]
+    }
+   ],
    "source": [
     "# First, convert the training and validation sets.\n",
     "_convert_dataset('train', training_filenames, class_names_to_ids, dataset_dir)\n",
@@ -406,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -417,9 +465,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "label index: 0 -- class name: daisy\n",
+      "label index: 1 -- class name: dandelion\n",
+      "label index: 2 -- class name: roses\n",
+      "label index: 3 -- class name: sunflowers\n",
+      "label index: 4 -- class name: tulips\n"
+     ]
+    }
+   ],
    "source": [
     "# print class names to ids\n",
     "for key, value in labels_to_class_names.items():\n",
@@ -428,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -449,9 +509,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Finished converting the Flowers dataset!\n"
+     ]
+    }
+   ],
    "source": [
     "_clean_up_temporary_files(dataset_dir)\n",
     "print('Finished converting the Flowers dataset!')"
