--- a/tf.version.1/03.cnn/05.cnn.cifar10.ipynb
+++ b/tf.version.1/03.cnn/05.cnn.cifar10.ipynb
@@ -44,6 +44,7 @@
     "import time\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
+    "%matplotlib inline\n",
     "from IPython.display import clear_output\n",
     "\n",
     "import tensorflow as tf\n",
