--- a/tf.version.1/03.cnn/06.cnn.cifar10.regularization.ipynb
+++ b/tf.version.1/03.cnn/06.cnn.cifar10.regularization.ipynb
@@ -47,6 +47,7 @@
     "import time\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
+    "%matplotlib inline\n",
     "from IPython.display import clear_output\n",
     "\n",
     "import tensorflow as tf\n",
