change figure file path (web link) in 01.tf.basic/01.hello.tf

--- a/tf.version.1/01.tf.basic/01.hello.tf.ipynb
+++ b/tf.version.1/01.tf.basic/01.hello.tf.ipynb
@@ -32,7 +32,7 @@
    "source": [
     "## TensorFlow Programming Stack\n",
     "\n",
-    "<img src=\"../../figures/tensorflow_programming_environment.png\" width=\"70%\">"
+    "<img src=\"https://user-images.githubusercontent.com/11681225/46912209-324b8480-cfaa-11e8-9a30-6cd327841470.png\" width=\"70%\">"
    ]
   },
   {
@@ -62,7 +62,7 @@
     "* 변수를 생성하고 계산을 한다는 것은 그래프를 만드는 과정\n",
     "* `a`를 출력하면 **계산된 값**이 나오지 않음\n",
     "\n",
-    "<img src=\"../../figures/TF_graph.png\" width=\"60%\">"
+    "<img width=\"60%\" alt=\"tf_graph\" src=\"https://user-images.githubusercontent.com/11681225/46912242-f95fdf80-cfaa-11e8-8e1c-00af08c281dc.png\">"
    ]
   },
   {
@@ -95,7 +95,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"../../figures/TF_add1.png\" width=\"40%\">"
+    "<img width=\"40%\" alt=\"tf_add1\" src=\"https://user-images.githubusercontent.com/11681225/46912252-43e15c00-cfab-11e8-9488-bc5c6bccab0b.png\">"
    ]
   },
   {
@@ -140,7 +140,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"../../figures/TF_add2.png\" width=\"40%\">"
+    "<img width=\"40%\" alt=\"tf_add2\" src=\"https://user-images.githubusercontent.com/11681225/46912254-66737500-cfab-11e8-87e1-1d8364f5cc70.png\">"
    ]
   },
   {
@@ -259,7 +259,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"../../figures/TF_more_calculation.png\" width=\"60%\">"
+    "<img width=\"60%\" alt=\"tf_more_calculation\" src=\"https://user-images.githubusercontent.com/11681225/46912256-7db26280-cfab-11e8-903c-087f9a2688aa.png\">"
    ]
   },
   {
