change figure file path (web link) in 03.cnn/01.1 04.rnn/01 04.rnn/02

--- a/tf.version.1/03.cnn/01.1.mnist.deep.with.estimator.ipynb
+++ b/tf.version.1/03.cnn/01.1.mnist.deep.with.estimator.ipynb
@@ -7,8 +7,8 @@
     "# A Guide to TF Layers: Building a Convolutional Neural Network\n",
     "\n",
     "* [MNIST tutorials](https://www.tensorflow.org/tutorials/layers)\n",
+    "<img src=\"https://user-images.githubusercontent.com/11681225/46912292-54460680-cfac-11e8-89a3-d8d1a4ec13ae.png\" width=\"20%\">\n",
     "\n",
-    "![MNIST](../../figures/mnist_0-9.png)\n",
     "* training dataset: 60000\n",
     "* test dataset: 10000\n",
     "* one example: gray scale image with $28 \\times 28$ size\n",
@@ -65,7 +65,8 @@
    "source": [
     "### Structure of LeNet 5\n",
     "\n",
-    "![LeNet5](../figures/Lenet5.png)\n",
+    "<img width=\"90%\" alt=\"lenet5\" src=\"https://user-images.githubusercontent.com/11681225/46912300-a0914680-cfac-11e8-92fb-f1817267b4e4.png\">\n",
+    "\n",
     "\n",
     "* Convolutional Layer #1: Applies 32 5x5 filters (extracting 5x5-pixel subregions), with ReLU activation function\n",
     "* Pooling Layer #1: Performs max pooling with a 2x2 filter and stride of 2 (which specifies that pooled regions do not overlap)\n",
