--- a/tf.version.1/04.rnn/02.rnn.basic.ipynb
+++ b/tf.version.1/04.rnn/02.rnn.basic.ipynb
@@ -495,7 +495,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![bi-directional rnn](../../figures/RNN-bidirectional.png)"
+    "![bidirectional_rnn](https://user-images.githubusercontent.com/11681225/46912324-3d53e400-cfad-11e8-8b09-85d8ebdb0e66.png)"
    ]
   },
   {
@@ -699,7 +699,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![Multi-layer rnn](../../figures/Multi-layer_rnn.png)"
+    "![multilayer_rnn](https://user-images.githubusercontent.com/11681225/46912330-5fe5fd00-cfad-11e8-95c2-94bb8e7b1bf6.png)"
    ]
   },
   {
