add and change comments

--- a/tf.version.2/02.regression/01.mnist.tf.data.eager.ipynb
+++ b/tf.version.2/02.regression/01.mnist.tf.data.eager.ipynb
@@ -6,8 +6,8 @@
    "source": [
     "# MNIST softmax with `tf.data`\n",
     "\n",
-    "* Make a networks like LeNet5 structure with MNIST data\n",
-    "  * input pipeline: `tf.data`\n",
+    "* Make a very simple networks which have just one layer. (No hidden layers)\n",
+    "* input pipeline: `tf.data`\n",
     "* Eager execution"
    ]
   },
@@ -227,6 +227,13 @@
     "# Train the model\n",
     "optimizer = tf.train.GradientDescentOptimizer(0.5)\n",
     "loss_history = []"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Train a model"
    ]
   },
   {
