add cnn mnist with regularization

--- a/tf.version.2/01.tf.basic/03.tf.data.ipynb
+++ b/tf.version.2/01.tf.basic/03.tf.data.ipynb
@@ -210,7 +210,8 @@
    "source": [
     "### 3. Iterator\n",
     "\n",
-    "* In eager execution, we can directly sample the batch dataset from `tf.data.Dataset` instead of using `Iterator`."
+    "* In eager execution, we can directly sample the batch dataset from `tf.data.Dataset` instead of using `Iterator`.\n",
+    "* We do not need to explicitly create an `tf.data.Iterator` object. "
    ]
   },
   {
