add generative models dcgan

--- a/tf.version.1/05.generative_models/01.dcgan.ipynb
+++ b/tf.version.1/05.generative_models/01.dcgan.ipynb
@@ -81,7 +81,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Import MNIST"
+    "## Load the MNIST dataset"
    ]
   },
   {
@@ -126,7 +126,7 @@
     "\n",
     "# for train\n",
     "train_dataset = tf.data.Dataset.from_tensor_slices(train_data)\n",
-    "train_dataset = train_dataset.shuffle(buffer_size = 10000)\n",
+    "train_dataset = train_dataset.shuffle(buffer_size = 60000)\n",
     "train_dataset = train_dataset.repeat(count=max_epochs)\n",
     "train_dataset = train_dataset.batch(batch_size = batch_size)\n",
     "print(train_dataset)"
