--- a/tf.version.2/03.cnn/01.mnist.LeNet5.ipynb
+++ b/tf.version.2/03.cnn/01.mnist.LeNet5.ipynb
@@ -249,7 +249,7 @@
    "source": [
     "global_step = tf.train.get_or_create_global_step()\n",
     "for epoch in range(max_epochs):\n",
-    "  for (step, (images, labels)) in enumerate(train_dataset):\n",
+    "  for images, labels in train_dataset:\n",
     "    start_time = time.time()\n",
     "    with tf.GradientTape() as tape:\n",
     "      logits = model(images, training=True)\n",
